030-software/fluxcd/apps/radio/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radio-server
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: radio-server
  template:
    metadata:
      labels:
        app: radio-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: radio-server
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: radio-server
      containers:
        - name: radio-server
          image: ghcr.io/shokohsc/radio-server:sha-1ab71f5@sha256:da1884be35b80ed2bc7e02a3e1b9fb28c190f6b0b9f159e63d573cef5259e55c
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /health
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 1024Mi
          volumeMounts:
            - name: genji
              mountPath: /music
      volumes:
        - name: genji
          nfs:
            server: genji.home.arpa
            path: /music/tracks
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radio-ui
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: radio-ui
  template:
    metadata:
      labels:
        app: radio-ui
        policy.gatekeeper.sh/ignore-psp-volume-types: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: radio-ui
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: radio-ui
      containers:
        - name: radio-ui
          image: busybox:1.38@sha256:fd7dc98638c8e305f4dc34e979f1c0fdfdcaeb0fbf8fcff77ae834b6da3d7e6e
          args: ["busybox", "httpd", "-f", "-v", "-p", "8080"]
          workingDir: /assets
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
          volumeMounts:
            - name: assets
              mountPath: /assets
      volumes:
        - name: assets
          image:
            reference: ghcr.io/shokohsc/radio-ui:sha-1ab71f5@sha256:41d5e290a27061821cc5354b048e659d84967892fea11c06f1c177702653a4c1
