030-software/fluxcd/apps/radio/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radio
spec:
  hostnames:
  - radio.home.arpa
  parentRefs:
  - name: radio
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: radio
  rules:
  - backendRefs:
    - name: radio-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  hostnames:
  - api.radio.home.arpa
  parentRefs:
  - name: radio
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: api
  rules:
  - backendRefs:
    - name: radio-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - cors:
        allowOrigins:
        - https://radio.home.arpa
        allowMethods:
        - GET
        - OPTIONS
        allowHeaders:
        - DNT
        - X-CustomHeader
        - Keep-Alive
        - User-Agent
        - X-Requested-With
        - If-Modified-Since
        - Cache-Control
        - Content-Type
        allowCredentials: false
        maxAge: 3600
      type: CORS
