030-software/fluxcd/apps/radio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radio
  labels:
    app.kubernetes.io/instance: radio
    app.kubernetes.io/name: radio
  annotations:
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.${domain}/icon: radio
    dashboard.${domain}/name: radio
    dashboard.${domain}/url: https://radio.${domain}
    # kubernetes.io/ingress.class: ${ingressClass}

    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"

    # nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "60"
    # nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "0"
spec:
  tls:
    - hosts:
        - "radio.${domain}"
        - "api.radio.${domain}"
      secretName: "radio-cert"
  rules:
    - host: "radio.${domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radio-ui
                port:
                  number: 80
    - host: "api.radio.${domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radio-server
                port:
                  number: 80
